# coursera-transcript-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/coursera_transcripts/: api.py  cli.py  downloader.py
