[project]
name = "coursera-transcripts"
version = "0.1.0"
description = "CLI tool to extract Coursera course transcripts/subtitles"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
coursera-transcripts = "coursera_transcripts.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
