[project]
name = "coursera-transcripts"
dynamic = ["version"]
description = "CLI tool to extract Coursera course transcripts/subtitles"
readme = "README.md"
authors = [
  { name="Kavin", email="your-email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
coursera-transcripts = "coursera_transcripts.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "coursera_transcripts.__version__"}
